Version 2.6.1
-------------
Play selections should function even after switching clips, restarting playback.
Add encoded files to global "recently used files".
Implement custom themes / colours in Preferences (in progress).
Minor compilation fix for gtk+ 2.x






Version 2.6.0 (1 Feb 2016)
--------------------------
Fix crash when applying rendered effects to virtual clips.
Add h264/aac, wmv2, ffv1 and mjpeg encodings to ffmpeg_encoder.
Fix memory leak in new style gdkpixbuf converter.
Fix frame seek bug in avformat decoder with non-zero start time.
Autoscroll "Show details" when encoding.
Work around a gtk+ crash bug in GtkTextView with lots of text.
Show missing libraries in ffmpeg_encoder.
Show time remaining estimate for encoding for most encoder formats.
OK / Cancel in the file chooser should immediately cancel any preview (regression).
Add "Use current clip values" button when entering multitrack.
Fix memory leak in pulseaudio input analysis.
Minor GUI improvements.






Version 2.4.8 (24 Jan 2016)
--------------------------
Fix hang in merge in Clip Editor (regression).
Fix rendering error in multitrack (wrong clip number).










Version 2.4.7 (18 Jan 2016)
---------------------------
Fix regression in "Insert Silence".
Fix background colour for notebook tabs in multitack (gtk+ 3.x)
Fix crash when entering Preferences dialog (GType error).
Reshow timeline after hiding it.
Update current time when clicking on timeline header in Multitrack (regression).
Tested support for SDL 2.x (does not work)
Trivial compiler fix for gtk+ 2.x











Version 2.4.6 (19 December 2015)
--------------------------------
Fix crashes and compatibility issues with gtk+ >= 3.16
Fix a bug with missing clips when reloading layouts.
Minor GUI improvements.
Minor compilation fixes.
Updates to French translation (thanks Jean-Marc).












Version 2.4.5 (2 December 2015)
-------------------------------
Fix for undo after downsampling video (regression).