@@ -483,9 +483,7 @@ typedef struct {
 
   // prefs (Save on exit)
   int prefs_changed;
-#define PREFS_THEME_CHANGED (1<<0)
-#define PREFS_JACK_CHANGED (1<<1)
-#define PREFS_TEMPDIR_CHANGED (1<<2)
+
   boolean prefs_need_restart;
 
   /// default sizes for when no file is loaded
